--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <meta property="og:title" content="Beatrice the (Carpenter) Bee @ Quanta 600 FEG Environmental Scanning Electron Microscope">
         <meta property="og:description" content="Microscope images of a carpenter bee from the Quanta 600 FEG Environmental Scanning Electron Microscope at the Nanoscale Characterization Facility at the Krishna P. Singh Center for Nanotechnology at the University of Pennsylvania.">
         <meta property="og:url" content="https://www.seas.upenn.edu/~ericoc/bee/">
-        <meta property="og:image" content="https://www.seas.upenn.edu/~ericoc/bee/icon.png">
-        <link rel="shortcut icon" href="https://www.seas.upenn.edu/~ericoc/bee/favicon.ico">
-        <link rel="apple-touch-icon" href="https://www.seas.upenn.edu/~ericoc/bee/icon.png">
+        <meta property="og:image" content="https://www.seas.upenn.edu/~ericoc/bee/static/images/icon.png">
+        <link rel="shortcut icon" href="https://www.seas.upenn.edu/~ericoc/bee/static/images/favicon.ico">
+        <link rel="apple-touch-icon" href="https://www.seas.upenn.edu/~ericoc/bee/static/images/icon.png">
         <title>Beatrice the (Carpenter) Bee @ Quanta 600 FEG Environmental Scanning Electron Microscope</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,7 +32,7 @@
     <body>
         <header class="m-3 row border-bottom pb-3">
             <span class="col text-start" id="title" title="Beatrice the (Carpenter) Bee">
-                <img class="logo" src="icon.png" alt="Bee Logo" aria-hidden="true">
+                <img class="logo" src="static/images/icon.png" alt="Bee Logo" aria-hidden="true">
                 <a class="h2" href="https://www.seas.upenn.edu/~ericoc/bee/">Beatrice the <small>(Carpenter)</small> Bee</a>
             </span>
             <span class="col h4 text-end">
@@ -46,11 +46,11 @@
                         <span class="h3 text-start">Head</span>
                     </summary>
                     <p class="text-center">
-                        <a href="Head_001.png" target="_blank"><img class="img-bee rounded border border-primary m-1" src="Head_001.png" id="head1"></a>
-                        <a href="Head_003.png" target="_blank"><img class="img-bee rounded border border-primary m-1" src="Head_003.png" id="head3"></a>
-                        <a href="Head_004.png" target="_blank"><img class="img-bee rounded border border-primary m-1" src="Head_004.png" id="head4"></a>
-                        <a href="Head_005.png" target="_blank"><img class="img-bee rounded border border-primary m-1" src="Head_005.png" id="head5"></a>
-                        <a href="Head_002_4K.png" target="_blank"><img class="img-bee rounded border border-primary m-1" src="Head_002_4K.png" id="head2"></a>
+                        <a href="static/images/head/Head_001.png" target="_blank"><img class="img-bee rounded border border-primary m-1" src="static/images/head/Head_001.png" id="head1"></a>
+                        <a href="static/images/head/Head_003.png" target="_blank"><img class="img-bee rounded border border-primary m-1" src="static/images/head/Head_003.png" id="head3"></a>
+                        <a href="static/images/head/Head_004.png" target="_blank"><img class="img-bee rounded border border-primary m-1" src="static/images/head/Head_004.png" id="head4"></a>
+                        <a href="static/images/head/Head_005.png" target="_blank"><img class="img-bee rounded border border-primary m-1" src="static/images/head/Head_005.png" id="head5"></a>
+                        <a href="static/images/head/Head_002_4K.png" target="_blank"><img class="img-bee rounded border border-primary m-1" src="static/images/head/Head_002_4K.png" id="head2"></a>
                     </p>
                 </details>
                 <details class="border-bottom m-3 p-3" id="forehead" open>
