--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                         <span class="h3 text-start">Head</span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/head/Head_001.png" target="_blank"><img class="img-bee rounded border border-primary m-1" src="static/images/head/Head_001.png" id="head1"></a>
-                        <a href="static/images/head/Head_003.png" target="_blank"><img class="img-bee rounded border border-primary m-1" src="static/images/head/Head_003.png" id="head3"></a>
-                        <a href="static/images/head/Head_004.png" target="_blank"><img class="img-bee rounded border border-primary m-1" src="static/images/head/Head_004.png" id="head4"></a>
-                        <a href="static/images/head/Head_005.png" target="_blank"><img class="img-bee rounded border border-primary m-1" src="static/images/head/Head_005.png" id="head5"></a>
-                        <a href="static/images/head/Head_002_4K.png" target="_blank"><img class="img-bee rounded border border-primary m-1" src="static/images/head/Head_002_4K.png" id="head2"></a>
+                        <a href="static/images/head/Head_001.png" target="_blank"><img alt="Head 001" class="img-bee rounded border border-primary m-1" src="static/images/head/Head_001.png" id="head1"></a>
+                        <a href="static/images/head/Head_003.png" target="_blank"><img alt="Head 003" class="img-bee rounded border border-primary m-1" src="static/images/head/Head_003.png" id="head3"></a>
+                        <a href="static/images/head/Head_004.png" target="_blank"><img alt="Head 004" class="img-bee rounded border border-primary m-1" src="static/images/head/Head_004.png" id="head4"></a>
+                        <a href="static/images/head/Head_005.png" target="_blank"><img alt="Head 005" class="img-bee rounded border border-primary m-1" src="static/images/head/Head_005.png" id="head5"></a>
+                        <a href="static/images/head/Head_002_4K.png" target="_blank"><img alt="Head 002 (4K)" class="img-bee rounded border border-primary m-1" src="static/images/head/Head_002_4K.png" id="head2"></a>
                     </p>
                 </details>
                 <details class="border-bottom m-3 p-3" id="forehead" open>
