--- a/index.html
+++ b/index.html
@@ -45,16 +45,67 @@
                         <span class="h3 text-start">Head</span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/head/Head_001.png" target="_blank"><img alt="Head 001" class="img-bee rounded border border-primary m-1" src="static/images/head/Head_001.png" id="head1"></a>
-                        <a href="static/images/head/Head_003.png" target="_blank"><img alt="Head 003" class="img-bee rounded border border-primary m-1" src="static/images/head/Head_003.png" id="head3"></a>
-                        <a href="static/images/head/Head_004.png" target="_blank"><img alt="Head 004" class="img-bee rounded border border-primary m-1" src="static/images/head/Head_004.png" id="head4"></a>
-                        <a href="static/images/head/Head_005.png" target="_blank"><img alt="Head 005" class="img-bee rounded border border-primary m-1" src="static/images/head/Head_005.png" id="head5"></a>
-                        <a href="static/images/head/Head_002_4K.png" target="_blank"><img alt="Head 002 (4K)" class="img-bee rounded border border-primary m-1" src="static/images/head/Head_002_4K.png" id="head2"></a>
+                        <a href="static/images/head/head_001.png" target="_blank"><img alt="Head 001" class="img-bee rounded border border-primary m-1" src="static/images/head/head_001.png" id="head1"></a>
+                        <a href="static/images/head/head_003.png" target="_blank"><img alt="Head 003" class="img-bee rounded border border-primary m-1" src="static/images/head/head_003.png" id="head3"></a>
+                        <a href="static/images/head/head_004.png" target="_blank"><img alt="Head 004" class="img-bee rounded border border-primary m-1" src="static/images/head/head_004.png" id="head4"></a>
+                        <a href="static/images/head/head_005.png" target="_blank"><img alt="Head 005" class="img-bee rounded border border-primary m-1" src="static/images/head/head_005.png" id="head5"></a>
+                        <a href="static/images/head/head_002_4K.png" target="_blank"><img alt="Head 002 (4K)" class="img-bee rounded border border-primary m-1" src="static/images/head/head_002_4K.png" id="head2"></a>
                     </p>
                 </details>
                 <details class="border-bottom m-3 p-3" id="forehead" open>
                     <summary class="p-3">
                         <span class="h3 text-start">Forehead</span>
+                    </summary>
+                    <p class="text-center">
+                        <a href="static/images/forehead/forehead_001.png" target="_blank"><img alt="Forehead 001" class="img-bee rounded border border-primary m-1" src="static/images/forehead/forehead_001.png" id="forehead1"></a>
+                        <a href="static/images/forehead/forehead_002.png" target="_blank"><img alt="Forehead 002" class="img-bee rounded border border-primary m-1" src="static/images/forehead/forehead_002.png" id="forehead2"></a>
+                        <a href="static/images/forehead/forehead_003.png" target="_blank"><img alt="Forehead 003" class="img-bee rounded border border-primary m-1" src="static/images/forehead/forehead_003.png" id="forehead3"></a>
+                        <a href="static/images/forehead/forehead_004.png" target="_blank"><img alt="Forehead 004" class="img-bee rounded border border-primary m-1" src="static/images/forehead/forehead_004.png" id="forehead4"></a>
+                    </p>
+                </details>
+                <details class="border-bottom m-3 p-3" id="Eye" open>
+                    <summary class="p-3">
+                        <span class="h3 text-start">Eye</span>
+                    </summary>
+                    <p class="text-center">
+                        <i>Coming Soon...</i>
+                    </p>
+                </details>
+                <details class="border-bottom m-3 p-3" id="antenna" open>
+                    <summary class="p-3">
+                        <span class="h3 text-start">Antenna</span>
+                    </summary>
+                    <p class="text-center">
+                        <i>Coming Soon...</i>
+                    </p>
+                </details>
+                <details class="border-bottom m-3 p-3" id="wing" open>
+                    <summary class="p-3">
+                        <span class="h3 text-start">Wing</span>
+                    </summary>
+                    <p class="text-center">
+                        <i>Coming Soon...</i>
+                    </p>
+                </details>
+                <details class="border-bottom m-3 p-3" id="knees" open>
+                    <summary class="p-3">
+                        <span class="h3 text-start">Knees</span>
+                    </summary>
+                    <p class="text-center">
+                        <i>Coming Soon...</i>
+                    </p>
+                </details>
+                <details class="border-bottom m-3 p-3" id="stinger" open>
+                    <summary class="p-3">
+                        <span class="h3 text-start">Stinger</span>
+                    </summary>
+                    <p class="text-center">
+                        <i>Coming Soon...</i>
+                    </p>
+                </details>
+                <details class="border-bottom m-3 p-3" id="portrait" open>
+                    <summary class="p-3">
+                        <span class="h3 text-start">Portrait</span>
                     </summary>
                     <p class="text-center">
                         <i>Coming Soon...</i>
