--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
                         </span>
                     </summary>
                     <p class="text-center">
-                        <i>Coming Soon...</i>
+                        <a href="static/images/eye/eye_001.png" target="_blank"><img alt="Eye 001" class="img-bee rounded border border-primary m-1" src="static/images/eye/eye_001.png" id="eye1"></a>
+                        <a href="static/images/eye/eye_002.png" target="_blank"><img alt="Eye 002" class="img-bee rounded border border-primary m-1" src="static/images/eye/eye_002.png" id="eye2"></a>
+                        <a href="static/images/eye/eye_003.png" target="_blank"><img alt="Eye 003" class="img-bee rounded border border-primary m-1" src="static/images/eye/eye_003.png" id="eye3"></a>
+                        <a href="static/images/eye/eye_004.png" target="_blank"><img alt="Eye 004" class="img-bee rounded border border-primary m-1" src="static/images/eye/eye_004.png" id="eye4"></a>
                     </p>
                 </details>
                 <details class="border-bottom m-3 p-3" id="antenna" open>
