--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                 <p class="text-center">
                     <a href="static/images/portrait/portrait.png" target="_blank"><img alt="Portrait" class="rounded border border-3 border-dark" src="static/images/portrait/portrait_annotated.png" id="portrait"></a>
                 </p>
+                <p class="lead text-center fst-italic p-1">
+                    Beatrice was a female carpenter bee, that was caught in North Philadelphia in May 2025.
+                </p>
                 <details class="border-3 border-top border-dark border-bottom m-1 p-1" id="head" open>
                     <summary class="p-1">
                         <span class="h3 text-start">
